--- a/environment.yml
+++ b/environment.yml
@@ -5,5 +5,6 @@ dependencies:
   - numpy
   - scikit-image
   - jupyter
-  - scipy
+  - pandas
+  - seaborn
 prefix: C:\Users\L\anaconda3\envs\environmentGroup4
